# catalog_bot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
bot/: Dockerfile  config.py  main.py  pyproject.toml
bot/handlers/: __init__.py  catalog.py  orders.py
bot/keyboards/: inline.py
bot/utils/: api_client.py
