[project]
name = "catalog-bot-backend"
version = "0.1.0"
description = "Django backend for catalog bot"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.14,<4.0",
    "psycopg2-binary>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pillow>=10.0,<11.0",
    "django-cors-headers>=4.3,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"