[project]
name = "catalog-bot-telegram"
version = "0.1.0"
description = "Telegram bot for catalog"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "aiohttp>=3.9,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"